Creado el esqueleto básico de la aplicación
A nivel visual, el cómo va a ser el inicio del juego

--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Jawc</title>
+  <title>JAWC</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+  <script defer src="assets/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-  <app-root></app-root>
+  <div class="container d-flex gap-5 justify-content-center">
+    <app-root></app-root>
+  </div>
 </body>
 </html>
