--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="assets/css/bootstrap.min.css" rel="stylesheet">
   <script defer src="assets/js/bootstrap.bundle.min.js"></script>
+  <script defer src="assets/js/dictionary.js"></script>
 </head>
 <body>
   <div class="container d-flex gap-5 justify-content-center">
