--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <script defer src="assets/js/dictionary.js"></script>
 </head>
 <body>
-  <div class="container d-flex gap-5 justify-content-center">
+  <div class="container justify-content-center">
     <app-root></app-root>
   </div>
 </body>
