--- a/src/index.html
+++ b/src/index.html
@@ -9,10 +9,12 @@
   <link href="assets/css/bootstrap.min.css" rel="stylesheet">
   <script defer src="assets/js/bootstrap.bundle.min.js"></script>
   <script defer src="assets/js/dictionary.js"></script>
+
 </head>
 <body>
   <div class="container justify-content-center">
     <app-root></app-root>
   </div>
+  <script defer src="assets/js/modal.js"></script>
 </body>
 </html>
